feat(availability): WIP Introduces availability endpoints
