# src/controllers/room-types.js
@@ -12,11 +12,22 @@ const detectRatePlans = (roomTypeId, ratePlansObject) => {
     }, {});
 };
 
+const detectAvailability = (roomTypeId, availabilityObject) => {
+  let availability = availabilityObject && availabilityObject.latestSnapshot.availability[roomTypeId];
+  return {
+    updatedAt: availabilityObject && availabilityObject.latestSnapshot.updatedAt,
+    availability: availability || [],
+  };
+};
+
 const getPlainHotel = async (hotel, fieldsQuery) => {
   fieldsQuery = fieldsQuery.filter((x) => !!x);
   const resolvedFields = ['descriptionUri.roomTypes'];
   if (fieldsQuery.indexOf('ratePlans') > -1) {
     resolvedFields.push('ratePlansUri');
+  }
+  if (fieldsQuery.indexOf('availability') > -1) {
+    resolvedFields.push('availabilityUri');
   }
   return hotel.toPlainObject(resolvedFields);
 };
@@ -52,6 +63,9 @@ const find = async (req, res, next) => {
     if (fieldsQuery.indexOf('ratePlans') > -1) {
       roomType.ratePlans = detectRatePlans(roomTypeId, plainHotel.dataUri.contents.ratePlansUri.contents);
     }
+    if (fieldsQuery.indexOf('availability') > -1) {
+      roomType.availability = detectAvailability(roomTypeId, plainHotel.dataUri.contents.availabilityUri.contents);
+    }
     res.status(200).json(roomType);
   } catch (e) {
     next(e);
@@ -69,8 +83,22 @@ const findRatePlans = async (req, res, next) => {
   }
 };
 
+const findAvailability = async (req, res, next) => {
+  let { roomTypeId } = req.params;
+  try {
+    let plainHotel = await res.locals.wt.hotel.toPlainObject(['availabilityUri']);
+    if (!plainHotel.dataUri.contents.availabilityUri) {
+      return next(new Http404Error('noAvailability', 'No availabilityUri specified.'));
+    }
+    res.status(200).json(detectAvailability(roomTypeId, plainHotel.dataUri.contents.availabilityUri.contents));
+  } catch (e) {
+    next(e);
+  }
+};
+
 module.exports = {
   findAll,
   find,
   findRatePlans,
+  findAvailability,
 };
